<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/ButtonStyle"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#000000"
            android:gravity="end|bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHint="#FFFFFF"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonAC"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/Grey"
            android:padding="5dp"
            android:text="@string/ac"
            android:textColor="#000000"
            android:onClick="onClear"/>


        <Button
            android:id="@+id/buttonChangeSign"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/Grey"
            android:padding="5dp"
            android:text="@string/backSpace"
            android:onClick="onClrOne"
            android:textColor="#000000"
            />

        <Button
            android:id="@+id/buttonPercentage"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/Grey"
            android:padding="5dp"
            android:text="@string/Percentage"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/OperatorColor"
            android:padding="5dp"
            android:onClick="onOperator"
            android:text="@string/Divide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_7"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/button8"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_8"
            android:onClick="onDigit"/>


        <Button
            android:id="@+id/button9"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_9"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/OperatorColor"
            android:padding="5dp"
            android:onClick="onOperator"
            android:text="@string/Multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_4"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_5"
            android:onClick="onDigit"/>


        <Button
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_6"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonsubtract"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/OperatorColor"
            android:padding="5dp"
            android:onClick="onOperator"
            android:text="@string/Subtract" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_1"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_2"
            android:onClick="onDigit"/>


        <Button
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:text="@string/_3"
            android:onClick="onDigit" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/OperatorColor"
            android:padding="5dp"
            android:onClick="onOperator"
            android:text="@string/Addition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:backgroundTint="#F6932E"
            android:onClick="onDigit"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:onClick="onDecimalPoint"
            android:padding="5dp"
            android:text="@string/Decimal" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:backgroundTint="@color/OperatorColor"
            android:padding="5dp"
            android:onClick="onEqual"
            android:text="@string/Equal" />
    </LinearLayout>

</LinearLayout>
